# libv3270

./: .gitignore  .lgtm.yml  AUTHORS  CHANGELOG  Makefile.in  PKGBUILD.mingw  README.md  autogen.sh  colors.conf  configure.ac  gtkdoc.sh  lgtm.yml  libv3270.pc.in  meson.build  sources.mak  test.glade  v3270.cbp  valgrind.suppression
.github/: codeql-analysis.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  macos.yml  msys2.yml  publish.yml
arch/: PKGBUILD
conf/: colors.conf
debian/: changelog  control  control.in  lib3270.dsc  libv3270.dsc  rules  shlibs
glade/: v3270.xml.in  widget-test.glade
locale/: Makefile.in  libv3270-5.4.pot  pt_BR.po
mac/: ci-build.sh  libv3270.modules
po/: POTFILES.in  pt_BR.po
remap/: bracket.xml
rpm/: _service  _servicedata  libv3270.spec
sdk/: libv3270.pc.in
src/clipboard/: copy.c  selection.c  table.c  text.c
src/clipboard/linux/: paste.c
src/clipboard/windows/: paste.c
src/dialogs/: colors.c  colorscheme.c  commondialog.c  dialog.c  fontselect.c  hostselect.c  load.c  popups.c  private.h  security.c  select.c  settings.c  settingsdialog.c  togglebutton.c  tools.c  transfer.c
src/dialogs/font/: chooser.c  model.c  select.c
src/dialogs/linux/: select.c
src/dialogs/print/: begin.c  convenience.c  custom.c  draw.c  keyfile.c  print.c  private.h  settings.c  settingsdialog.c
src/dialogs/save/: convenience.c  private.h  save.c
src/dialogs/settings/: accelerator.c  clipboard.c  colors.c  dialog.c  host.c  marshal  popup.c  private.h  tools.c  url.c  widget.c
src/dialogs/windows/: select.c
src/filetransfer/: activity.c  activitylist.c  dialog.c  filelist.c  get.c  load.c  marshal  misc.c  private.h  save.c  select.c  set.c  settings.c  tables.c  transfer.c  v3270ft.c  v3270ftprogress.c  worker.c
src/gobjects/: v3270-terminal.c  v3270.c
src/include/: clipboard.h  config.h.in  hostselect.h  internals.h  save.h  terminal.h  v3270-terminal.h  v3270.h
src/include/private/: v3270-terminal.h  v3270.h
src/include/v3270/: accessible.h  actions.h  colorscheme.h  dialogs.h  filetransfer.h  ftprogress.h  keyboard.h  print.h  security.h  selection.h  settings.h  toggle.h  tools.h  trace.h
src/include/v3270/settings/: url.h
src/selection/: copy.c  datablock.c  get.c  html.c  pixbuf.c  selection.c  table.c  text.c
src/selection/darwin/: copy.c  paste.c
src/selection/linux/: copy.c  paste.c
src/selection/macos/: paste.c
src/selection/windows/: copy.c  paste.c
src/terminal/: accessible.c  actions.c  blink.c  callbacks.c  charset.c  colors.c  draw.c  font.c  get.c  iocallback.c  keyboard.c  keyfile.c  marshal  mouse.c  oia.c  private.h  properties.c  scroll.c  security.c  selection.c  surface.c  toggles.c  widget.c
src/terminal/actions/: action.c  clipboard.c  conditional.c  dialog.c  internal.c  lib3270.c  pakey.c  pfkey.c  print.c  private.h  property.c  save.c  scroll.c  simple.c  table.c  toggle.c  zoom.c
src/terminal/darwin/: iosource.c
src/terminal/drawing/: draw.c  oia.c  surface.c
src/terminal/font/: actions.c  compute.c  info.c  metrics.c  private.h  properties.c  translate.c
src/terminal/keyboard/: accelerator.c  clipboard.c  init.c  keyfile.c  map.c  private.h
src/terminal/linux/: iosource.c
src/terminal/macos/: init.c  iosource.c
src/terminal/properties/: get.c  init.c  methods.c  private.h  set.c
src/terminal/windows/: init.c  iosource.c  registry.c  resources.rc.in
src/testprogram/: private.h  testprogram.c  toolbar.c
src/tools/: dialog.c  entry.c  widget.c
src/trace/: exec.c  marshal  private.h  property.c  text.c  trace.c  tracewindow.c  widget.c
src/v3270/: accessible.c  callbacks.c  charset.c  colors.c  draw.c  font.c  iocallback.c  keyboard.c  macros.c  mouse.c  oia.c  print.c  private.h  properties.c  security.c  selection.c  widget.c
src/v3270/linux/: iosource.c
src/v3270/windows/: iosource.c
src/v3270ft/: activity.c  activitylist.c  dialog.c  filelist.c  load.c  private.h  select.c  settings.c  tables.c  transfer.c  v3270ft.c
testscripts/: glade.sh  web.sh
win/: PKGBUILD  ci-build.sh  install-cross.sh  mingw32-libv3270.spec  mingw64-libv3270.spec  mingw64-service.xml
win/mingw32/: _service  _service.xml  libv3270.spec  mingw32-libv3270.spec
win/mingw64/: _service  mingw64-libv3270.spec
win/x86_32/: _service  mingw32-libv3270.spec
win/x86_64/: _service  mingw64-libv3270.spec
windows/x86_32/: _service  mingw32-libv3270.spec
windows/x86_64/: CHANGELOG  _service  mingw64-libv3270.spec
